--- a/products.html
+++ b/products.html
@@ -339,24 +339,23 @@
         </div>
         <!----------------------------------footer------------------------------------->
         <div class ="footer">
-            <div class="container">
-                
-                <div class="row">
-                    <div class="footer-col-2">
-                        <img src="images/logo-white.png">
-                        <p>Thank you for coming to use our service.</p>
-                    </div>
-                    <div class="footer-col-4">
-                        <h3>Follow us</h3>
-                        <ul>
-                            <li><a href="https://www.facebook.com/profile.php?id=100089833762334">Facebook</a></li>
-                            <li>081-9424507 (คุณแก้ว)</li>
-                            <li>098-2625255 (คุณโต้)</li>
-                        </ul>
-                    </div>
-                    
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-2">
+                    <img src="images/logo-white.png">
+                    <p>Thank you for coming to use our service.</p>
+                </div>
+                <div class="footer-col-4">
+                    <h3>Follow us</h3>
+                    <ul>
+                        <li><a href="https://www.facebook.com/profile.php?id=100089833762334">Facebook</a></li>
+                        <li>081-9424507 (คุณแก้ว)</li>
+                        <li>098-2625255 (คุณโต้)</li>
+                    </ul>
                 </div>
             </div>
+        </div>
     </div>
+    <script src="products.js"></script>
     </body>
 </html>
