--- a/home.html
+++ b/home.html
@@ -59,7 +59,64 @@
                 </div>
             </div>
         </div>
+        <section class="RentalRulesandDocument section" id="RentalRulesRentalRulesandDocument">
+            <div class="Servicerentalrules">
+                <h3>กติกาการเช่าบริการ</h3>
+                <p class="servicerentalrules">
+                    1.  นับ 24 ขั่งโมง เป็น 1 วัน (รับรถเวลาไหนคืนเวลานั้น) หากคืนเกินเวลาที่ตกลง ทางร้านจะปัดเป็นรายขั่วโมง ชั่วโมงละ 50 - 100 ตามรุ่นรถ <br>
+                    2.  กรณีเกิน 7 ชั่วโมง คิดเป็น 1 วัน<br>
+                    3.  ครบกำหนดคืน และไม่มีคนเช่าต่อ ลูกค้าที่เช่าอยู่สามารถเช่าต่อได้ หากมีลูกค้าท่านอื่นเช่า ลูกค้าต้องคืนรถและเช่ารถคันอื่นแทน<br>
+                    4.  หากมีใบสั่ง ใบค่าผ่านทาง ค่าปรับใดๆ ลูกค้าต้องเป็นผู้ชำระทุกกรณี<br>
+                    5.  ลูกค้าต้องชำระค่าประกันอุบัติเหตุ 3000 บาทต่อคัน ณ วันรับรถ และจะได้รับคืน เมื่อตรวจรับรถแล้วไม่มีปัญหาใดๆ ในวันคืนรถ <br>
+                    6.  หากลูกค้าทำรถสกปรกจนผิดวิสัย ทางร้านจะปรับค่าล้างทำความสะอาด 500-1500 บาท แล้วแต่กรณี<br>
+                    7.  กรณีเช่าเพิ่มจากที่แจ้งไว้ ลูกค้าจะต้องโอนเงินค่าเช่าทันที โดยจะไม่มีการหักจากเงินประกันใดๆทั้งสิ้น<br>
+                </p>
+            </div>
+            <div class="Documentsusedforrentingservices">
+                <h3>เอกสารที่ใช้เช่าบริการ</h3>
+                <p class="documentsusedforrentingservices">
+                    1.  บัตรประชาชน, Passport รวมทั้งใบขับขี่รถยนต์<br>
+                    2.  เอกสารแสดงที่อยู่อาศัยปัจจุบัน เช่น
+                    <p class="exampledocumentsusedforrentingservices">
+                        -บิลค่าน้ำ, บิลค่าไฟ, บิลค่าโทรศัพท์ <br>
+                        -หน้าซองจดหมาย(อายุส่งไม่เกิน 2 เดือน) <br>
+                        -สัญญาเช่าบ้าน, สัญญาเช่าห้อง<br>
+                    </p>
+                    3.  เอกสารแสดงที่อยู่ที่ทำงาน เช่น
+                    <p class="exampledocumentsusedforrentingservices">
+                        -บัตรพนักงาน(ถ่ายรูปหน้าและหลัง) <br>
+                        -สลิปเงินเดือน, เอกสารรับรองการทำงาน <br>
+                        -บิลขาย, สั่งซื้อสินค้า <br>
+                        -เอกสารการจ่ายภาษีปีล่าสุด <br>
+                        -สัญญาจ้างงาน, สัญญาเช่าร้าน <br>
+                        -บัตรนักศึกษา, ใบลงทะเบียนล่าสุด<br>
+                    </p>
+                    <p class="subdocumentsusedforrentingservices">
+                        กรณีคนติดต่อเช่าไม่ใช่ผู้ขับขี่ ต้องใช้บัตรประชาชนผู้ติดต่อเช่าร่วมด้วย<br>
+                        กรณีเป็นแม่บ้าน ใช้บัตรประชาชนผู้อยู่อาศัยร่วมเพิ่มอีก 1 คน
+                    </p>
+                    <p class="notedocumentsusedforrentingservices">
+                        หมายเหตุ : เอกสารที่ยื่นชื่อต้องตรงกับบัตรประชาชนโดยใช้เอกสารคู่กับญาติ แฟน หรือ เพื่อนได้ แล้วแต่กรณี โดยทางร้านจะพิจารณาตามหลักเกณฑ์ที่กำหนด
+                    </p>
+                </p>
+            </div>
+        </section>
         
+        <section class="Question section" id="Question">
+            <h2 class="Accordion">คำถามที่พบบ่อย</h2>
+            <button class="accordion">มีบริการรับส่งถึงหน้าบ้านไหม</button>
+            <div class="panel">
+                <p>ทางร้านมีบริการรับส่งถึงบ้าน โดยจะคิดตามระยะทางจริงและค่าบริการเที่ยวละ 100 บาท</p>
+            </div>
+            <button class="accordion">จำกัดระยะทางต่อวันไหม</button>
+            <div class="panel">
+                <p>ทางร้านไม่ได้จำกัดระยะทางต่อวัน สามารถขับได้ตามอัธยาศัย</p>
+            </div>
+            <button class="accordion">นำรถยนต์หรือจักรยานยนต์มาฝากกับทางร้านได้มั้ย</button>
+            <div class="panel">
+                <p>ทางร้านรับฝากทั้งรถยนต์และจักรยานยนต์ หากนำมาฝากต้องไม่ล็อกพวงมาลัยหรือล็อกคอจักรยานยนต์ และนำกุญแจฝากไว้กับทางร้าน</p>
+            </div>
+        </section>
         <!----------------------------------footer------------------------------------->
         <div class ="footer">
         <div class="container">
@@ -77,7 +134,6 @@
                         <li>098-2625255 (คุณโต้)</li>
                     </ul>
                 </div>
-                
             </div>
         </div>
     </div>
