--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
-        <title>All Products - Redstore</title>
+        <title>Login/Singup account</title>
         <link rel="stylesheet" href="home.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
@@ -16,19 +16,19 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="home.html"><img src="images/logo.png" width="125px"></a>
+                    <a href="home.html"><img src="---------------------" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="home.html">Home</a></li>
-                        <li><a href="products.html">Products</a></li>
+                        <li><a href="products.html">All cars</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
-                <img src="images/menu.png" class="menu-icon" onClick="menutoggle()" >
+                <a href="cart.html"><img src="---------------------" width="30px" height="30px"></a>
+                <img src="---------------------" class="menu-icon" onClick="menutoggle()" >
             </div>
         
         </div>
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="images/image1.png" width="100%">
+                        <img src="---------------------" width="100%">
                     </div>
                     <div class="col-2">
                         <div class="form-container">
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col-2">
-                    <img src="images/logo-white.png">
+                    <img src="---------------------">
                     <p>Thank you for coming to use our service.</p>
                 </div>
                 <div class="footer-col-4">
