--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
                 <nav>
                     <ul id="MenuItems">
                         <li><a href="home.html">Home</a></li>
-                         <li><a href="products.html">Products</a></li>
+                         <li><a href="products.html">All cars</a></li>
                          <li><a href="">About</a></li>
                          <li><a href="">Contact</a></li>
                          <li><a href="account.html">Account</a></li>
