--- a/account.html
+++ b/account.html
@@ -8,7 +8,6 @@
         <link rel="stylesheet" href="home.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-        <!--added a cdn link by searching font awesome4 cdn and getting this link from https://www.bootstrapcdn.com/fontawesome/ this url*/-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     </head>
@@ -16,7 +15,7 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo">
-                    <a href="home.html"><img src="---------------------" width="125px"></a>
+                    <a href="home.html"><img src="images/logo.png" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -27,8 +26,8 @@
                         <li><a href="account.html">Account</a></li>
                     </ul>
                 </nav>
-                <a href="cart.html"><img src="---------------------" width="30px" height="30px"></a>
-                <img src="---------------------" class="menu-icon" onClick="menutoggle()" >
+                <a href="cart.html"><img src="images/cart.png" width="30px" height="30px"></a>
+                <img src="images/menu.png" class="menu-icon" onClick="menutoggle()" >
             </div>
         
         </div>
@@ -38,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="---------------------" width="100%">
+                        <img src="images/image1.png" width="100%">
                     </div>
                     <div class="col-2">
                         <div class="form-container">
@@ -71,7 +70,7 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col-2">
-                    <img src="---------------------">
+                    <img src="images/logo-white.png">
                     <p>Thank you for coming to use our service.</p>
                 </div>
                 <div class="footer-col-4">
