--- a/products.html
+++ b/products.html
@@ -9,8 +9,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
         <!--added a cdn link by searching font awesome4 cdn and getting this link from https://www.bootstrapcdn.com/fontawesome/ this url*/-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
     </head>
     <body>
         <!--<div class ="header">-->
@@ -55,7 +55,7 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="#" class="car_img_content_link">
+                            <a href="#https://fontawesome.com/icons/person?f=classic&s=solid" class="car_img_content_link">
                                 <figure class="car_img_content">
                                     <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
                                 </figure>
@@ -64,7 +64,7 @@
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="#" class="car_model_link">
+                                <a href="#https://fontawesome.com/icons/person?f=classic&s=solid" class="car_model_link">
                                     <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
                                 <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
@@ -86,7 +86,7 @@
                                 <span title="5">7</span>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#https://fontawesome.com/icons/person?f=classic&s=solid">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
@@ -206,7 +206,7 @@
                                 <span title="5">7</span>
                             </li>
                             <li>
-                                <a href="#">
+                                <a href="#products-details.html">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
