--- a/products.html
+++ b/products.html
@@ -55,7 +55,7 @@
                     </div>
                     <div class="car_body">
                         <div class="car_body_img_container">
-                            <a href="#https://fontawesome.com/icons/person?f=classic&s=solid" class="car_img_content_link">
+                            <a href="https://fontawesome.com/icons/person?f=classic&s=solid" class="car_img_content_link">
                                 <figure class="car_img_content">
                                     <img src="https://i.pinimg.com/564x/e6/ac/8a/e6ac8ac893b03f934695566dc05d3c76.jpg" alt="Ford Focus">
                                 </figure>
@@ -64,7 +64,7 @@
                         <div>
                             <p class="car_name">Toyota</p>
                             <div class="car_price_container">
-                                <a href="#https://fontawesome.com/icons/person?f=classic&s=solid" class="car_model_link">
+                                <a href="https://fontawesome.com/icons/person?f=classic&s=solid" class="car_model_link">
                                     <h2 class="car_model" title="FOCUS">Innova</h2>
                                 </a>
                                 <p class="car_price">2000฿ <span class="car_price_time">/day</span></p>
@@ -86,7 +86,7 @@
                                 <span title="5">7</span>
                             </li>
                             <li>
-                                <a href="#https://fontawesome.com/icons/person?f=classic&s=solid">
+                                <a href="https://fontawesome.com/icons/person?f=classic&s=solid">
                                     <button class="rentbtn">
                                         <p class="text">Go to book</p>
                                     </button>
