--- a/cart.html
+++ b/cart.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="home.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
-        <!--added a cdn link by searching font awesome4 cdn and getting this link from https://www.bootstrapcdn.com/fontawesome/ this url*/-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+        <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 
     </head>
     <body>
-        <!--<div class ="header">-->
         <div class="container">
             <div class="navbar">
                 <div class="logo">
@@ -23,7 +23,7 @@
                     <ul id="MenuItems">
                         <li><a href="home.html">Home</a></li>
                         <li><a href="products.html">All cars</a></li>
-                        <li><a href="">Document</a></li>
+                        <li><a href="document.html">Document</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="account.html">Account</a></li>
                     </ul>
@@ -32,10 +32,7 @@
                 <img src="images/menu.png" class="menu-icon" onClick="menutoggle()" >
             </div>
         </div>
-    <!--</div>-->
-
         <!------------------------------ cart items details------------------------------>
-
         <div class="small-container cart-page">
         <table>
             <tr>
