--- a/account.html
+++ b/account.html
@@ -22,7 +22,7 @@
                     <ul id="MenuItems">
                         <li><a href="home.html">Home</a></li>
                         <li><a href="products.html">All cars</a></li>
-                        <li><a href="">Document</a></li>
+                        <li><a href="document.html">Document</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="account.html">Account</a></li>
                     </ul>
