--- a/home.html
+++ b/home.html
@@ -201,79 +201,50 @@
         </div>
         
         <!---------------------------------- FAQ ------------------------------------->
-        <section class="Question section" id="Question">
-            <h2 class="Accordion">คำถามที่พบบ่อย</h2>
-            <button class="accordion">มีบริการรับส่งถึงหน้าบ้านไหม</button>
-            <div class="panel">
-                <p>ทางร้านมีบริการรับส่งถึงบ้าน โดยจะคิดตามระยะทางจริงและค่าบริการเที่ยวละ 100 บาท</p>
-            </div>
-            <button class="accordion">จำกัดระยะทางต่อวันไหม</button>
-            <div class="panel">
-                <p>ทางร้านไม่ได้จำกัดระยะทางต่อวัน สามารถขับได้ตามอัธยาศัย</p>
-            </div>
-            <button class="accordion">นำรถยนต์หรือจักรยานยนต์มาฝากกับทางร้านได้มั้ย</button>
-            <div class="panel">
-                <p>ทางร้านรับฝากทั้งรถยนต์และจักรยานยนต์ หากนำมาฝากต้องไม่ล็อกพวงมาลัยหรือล็อกคอจักรยานยนต์ และนำกุญแจฝากไว้กับทางร้าน</p>
-            </div>
-        </section>
-
-        <section class="faq-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-6 offset-md-3">
-                        <div class="faq-title text-center pb-3">
-                            <h2>FAQ</h2>
-                        </div>
+        <div class="FAQ">
+            <div class="Container">
+                <h1>คำถามที่พบบ่อย</h1>
+                <div class="wrapperfaq">
+                    <button class="togglefaq">
+                        มีบริการรับส่งถึงหน้าบ้านไหม
+                        <i class="fas fa-plus icon"></i>
+                    </button>
+                    <div class="contentfaq">
+                        <p>ทางร้านมีบริการรับส่งถึงบ้าน โดยจะคิดตามระยะทางจริงและค่าบริการเที่ยวละ 100 บาท</p>
                     </div>
-                    <div class="col-md-6 offset-md-3">
-                        <div class="faq" id="accordion">
-                            <div class="card">
-                                <div class="card-header" id="faqHeading-1">
-                                    <div class="mb-0">
-                                        <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-1" data-aria-expanded="true" data-aria-controls="faqCollapse-1">
-                                            <span class="badge">1</span>มีบริการรับส่งถึงหน้าบ้านไหม
-                                        </h5>
-                                    </div>
-                                </div>
-                                <div id="faqCollapse-1" class="collapse" aria-labelledby="faqHeading-1" data-parent="#accordion">
-                                    <div class="card-body">
-                                        <p>ทางร้านมีบริการรับส่งถึงบ้าน โดยจะคิดตามระยะทางจริงและค่าบริการเที่ยวละ 100 บาท</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header" id="faqHeading-2">
-                                    <div class="mb-0">
-                                        <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-2" data-aria-expanded="false" data-aria-controls="faqCollapse-2">
-                                            <span class="badge">2</span>จำกัดระยะทางต่อวันไหม
-                                        </h5>
-                                    </div>
-                                </div>
-                                <div id="faqCollapse-2" class="collapse" aria-labelledby="faqHeading-2" data-parent="#accordion">
-                                    <div class="card-body">
-                                    <p>ทางร้านไม่ได้จำกัดระยะทางต่อวัน สามารถขับได้ตามอัธยาศัย</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="card-header" id="faqHeading-3">
-                                    <div class="mb-0">
-                                        <h5 class="faq-title" data-toggle="collapse" data-target="#faqCollapse-3" data-aria-expanded="false" data-aria-controls="faqCollapse-3">
-                                            <span class="badge">3</span>นำรถยนต์หรือจักรยานยนต์มาฝากกับทางร้านได้มั้ย
-                                        </h5>
-                                    </div>
-                                </div>
-                                <div id="faqCollapse-3" class="collapse" aria-labelledby="faqHeading-3" data-parent="#accordion">
-                                    <div class="card-body">
-                                    <p>ทางร้านรับฝากทั้งรถยนต์และจักรยานยนต์ หากนำมาฝากต้องไม่ล็อกพวงมาลัยหรือล็อกคอจักรยานยนต์ และนำกุญแจฝากไว้กับทางร้าน</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                </div>
+                <div class="wrapperfaq">
+                    <button class="togglefaq">
+                        จำกัดระยะทางต่อวันไหม
+                        <i class="fas fa-plus icon"></i>
+                    </button>
+                    <div class="contentfaq">
+                        <p>ทางร้านไม่ได้จำกัดระยะทางต่อวัน สามารถขับได้ตามอัธยาศัย</p>
+                    </div>
+                </div>
+                <div class="wrapperfaq">
+                    <button class="togglefaq">
+                        นำรถยนต์หรือจักรยานยนต์มาฝากกับทางร้านได้มั้ย
+                        <i class="fas fa-plus icon"></i>
+                    </button>
+                    <div class="contentfaq">
+                        <p>ทางร้านรับฝากทั้งรถยนต์และจักรยานยนต์ หากนำมาฝากต้องไม่ล็อกพวงมาลัยหรือล็อกคอจักรยานยนต์ และนำกุญแจฝากไว้กับทางร้าน</p>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
         <!----------------------------------footer ------------------------------------->
         <div class ="footer">
         <div class="container">
