--- a/account.html
+++ b/account.html
@@ -35,7 +35,7 @@
         
         <!------------------------------ account-page details------------------------------>
         <div class="account-page">
-            <div class="container">
+        <!--<div class="container">
                 <div class="row">
                     <div class="col-2">
                         <img src="images/image1.png" width="100%">
@@ -63,6 +63,11 @@
                     </div>
                 </div>
             </div>
+        -->
+        <input type="text" 
+               id="password"
+               placeholder="Type your password here" /> 
+        <label for=""> 
         </div>
         
         <!----------------------------------footer------------------------------------->
