--- a/account.html
+++ b/account.html
@@ -35,10 +35,10 @@
         
         <!------------------------------ account-page details------------------------------>
         <div class="account-page">
-        <!--<div class="container">
+            <div class="container">
                 <div class="row">
                     <div class="col-2">
-                        <img src="images/image1.png" width="100%">
+                        <img src="https://i.pinimg.com/564x/e1/c6/ed/e1c6ed4f2a413ade3ef7455c9453be00.jpg" width="100%">
                     </div>
                     <div class="col-2">
                         <div class="form-container">
@@ -63,11 +63,6 @@
                     </div>
                 </div>
             </div>
-        -->
-        <input type="text" 
-               id="password"
-               placeholder="Type your password here" /> 
-        <label for=""> 
         </div>
         
         <!----------------------------------footer------------------------------------->
