--- a/document.html
+++ b/document.html
@@ -20,7 +20,7 @@
             <nav>
                 <ul id="MenuItems">
                     <li><a href="home.html">Home</a></li>
-                    <li><a href="products.html">All cars</a></li>
+                    <li><a href="products.html">Stock</a></li>
                     <li><a href="document.html">Document</a></li>
                     <li><a href="">Contact</a></li>
                     <li><a href="account.html">Account</a></li>
