--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                     <nav>
                         <ul id="MenuItems">
                             <li><a href="home.html"><button class="buttonHome"><p>Home</p></button></a></li>
-                            <li><a href="products.html"><button class="buttonRentalCar"><p>RentalCar</p></button></a></li>
+                            <li><a href="products.html"><button class="buttonRentalCar"><p>Stock</p></button></a></li>
                             <li><a href="document.html"><button class="buttonDocument"><p>Document</p></button></a></li>
                             <li><a href="#"><button class="buttonContect"><p>Contect</p></button></a></li>
                             <li><a href="account.html"><button class="buttonAccount"><p>Account</p></button></a></li>
