--- a/account.html
+++ b/account.html
@@ -20,11 +20,11 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="products.html">Stock</a></li>
-                        <li><a href="document.html">Document</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
+                        <li><a href="home.html"><button class="buttonHome"><p>Home</p></button></a></li>
+                        <li><a href="products.html"><button class="buttonRentalCar"><p>Stock</p></button></a></li>
+                        <li><a href="document.html"><button class="buttonDocument"><p>Document</p></button></a></li>
+                        <li><a href="#"><button class="buttonContect"><p>Contect</p></button></a></li>
+                        <li><a href="account.html"><button class="buttonAccount"><p>Account</p></button></a></li>
                     </ul>
                 </nav>
                 <div class="cartnavbar"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
@@ -37,9 +37,6 @@
         <div class="account-page">
             <div class="container">
                 <div class="row">
-                    <div class="col-2">
-                        <img src="https://i.pinimg.com/736x/6a/d1/ce/6ad1cee101ab660d655c5f14ab1327f5.jpg" width="100%">
-                    </div>
                     <div class="col-2">
                         <div class="form-container">
                             <div class="form-btn">
