--- a/cart.html
+++ b/cart.html
@@ -21,11 +21,11 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="products.html">All cars</a></li>
-                        <li><a href="document.html">Document</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="account.html">Account</a></li>
+                        <li><a href="home.html"><button class="buttonHome"><p>Home</p></button></a></li>
+                        <li><a href="products.html"><button class="buttonRentalCar"><p>Stock</p></button></a></li>
+                        <li><a href="document.html"><button class="buttonDocument"><p>Document</p></button></a></li>
+                        <li><a href="#"><button class="buttonContect"><p>Contect</p></button></a></li>
+                        <li><a href="account.html"><button class="buttonAccount"><p>Account</p></button></a></li>
                     </ul>
                 </nav>
                 <div class="cartnavbar"><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i></a></div>
