--- a/products-details.html
+++ b/products-details.html
@@ -14,7 +14,7 @@
 
     </head>
     <body>
-        <!--<div class ="header">-->
+        <div class ="header">
         <div class="container">
             <div class="navbar">
                 <div class="logo">
@@ -33,7 +33,7 @@
                 <div class="menunavbar"><i class="fa-solid fa-bars" class="menu-icon" onClick="menutoggle()"></i></div>
             </div>
         </div>
-    <!--</div>-->
+    </div>
         <!------------------------------ Single product details------------------------------>
         <div class="small-container single-product">
             
