--- a/index.html
+++ b/index.html
@@ -6,6 +6,48 @@
     <title>Home</title>
 </head>
 <body>
-    
+    <footer>
+        <section class="top">
+          <img src="logo.svg" />
+          <div class="links">
+            <div class="links-column">
+              <h2>Portfolio</h2>
+              <a>About</a>
+              <a>Skills</a>
+              <a>Attributes</a>
+              <a>Projects</a>
+              <a>Testimonials</a>
+            </div>
+            <div class="links-column">
+              <h2>Resources</h2>
+              <a>GitHub</a>
+              <a>npm</a>
+              <a>Codepen</a>
+              <a>Codesandbox</a>
+              <a>Dribbble</a>
+            </div>
+            <div class="links-column socials-column">
+              <h2>Social Media</h2>
+              <p>
+                Follow me on social media to get the latest awesome reels and
+                posts.
+              </p>
+              <div class="socials">
+                <a class="fa-brands fa-instagram"></a>
+                <a class="fa-brands fa-tiktok"></a>
+                <a class="fa-brands fa-linkedin"></a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="bottom">
+          <p class="copyright">© 2024 All rights reserved</p>
+          <div class="legal">
+            <a> Contact </a>
+            <a> Terms </a>
+            <a> Privacy </a>
+          </div>
+        </section>
+      </footer>
 </body>
 </html>
