--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <footer>
@@ -11,12 +25,11 @@
           <img src="logo.svg" />
           <div class="links">
             <div class="links-column">
-              <h2>Portfolio</h2>
-              <a>About</a>
-              <a>Skills</a>
-              <a>Attributes</a>
+              <h2>Menu</h2>
+              <a>Home</a>
+              <a>Stock</a>
+              <a></a>
               <a>Projects</a>
-              <a>Testimonials</a>
             </div>
             <div class="links-column">
               <h2>Resources</h2>
