--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
               <h2>Menu</h2>
               <a>Home</a>
               <a>Stock</a>
+              <a>Deal contract</a>
               <a></a>
-              <a>Projects</a>
             </div>
             <div class="links-column">
               <h2>Resources</h2>
