--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
                 posts.
               </p>
               <div class="socials">
-                <a class="fa-brands fa-instagram"></a>
-                <a class="fa-brands fa-tiktok"></a>
-                <a class="fa-brands fa-linkedin"></a>
+                <a class="fa-brands fa-facebook"></a>edf<br>
+                <a class="fa-brands fa-line"></a>
               </div>
             </div>
           </div>
         </section>
         <section class="bottom">
-          <p class="copyright">© 2024 All rights reserved</p>
+          <p class="copyright"></p>
           <div class="legal">
             <a> Contact </a>
             <a> Terms </a>
