--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 posts.
               </p>
               <div class="socials">
-                <a class="fa-brands fa-facebook"></a>edf<br>
-                <a class="fa-brands fa-line"></a>
+                <a href="https://www.facebook.com/profile.php?id=100089833762334" class="fa-brands fa-facebook" ></a>
+                <a href="https://line.me/ti/p/0819424507" class="fa-brands fa-line"></a>
               </div>
             </div>
           </div>
