--- a/index.html
+++ b/index.html
@@ -20,46 +20,70 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <nav class="navbar">
+        <img
+          onclick="document.body.classList.toggle('open')"
+          class="burger"
+          src="menu.svg"
+        />
+        <img src="github.svg" />
+        <div class="menu-items">
+          <div class="search">
+            <input value="Search or jump to..." />
+            <button>/</button>
+          </div>
+          <div class="menu menu-left">
+            <a href="#">Pulls</a>
+            <a href="#">Issues</a>
+            <a href="#">Explore</a>
+          </div>
+        </div>
+        <div class="menu menu-right">
+          <span class="badge"></span>
+          <img src="bell.svg" />
+          <img src="plus.svg" />
+          <img src="avatar.png" />
+        </div>
+    </nav>
+
+
+
     <footer>
         <section class="top">
-          <img src="logo.svg" />
-          <div class="links">
-            <div class="links-column">
-              <h2>Menu</h2>
-              <a>Home</a>
-              <a>Stock</a>
-              <a>Deal contract</a>
-              <a></a>
+            <img src="logo.svg" />
+            <div class="links">
+                <div class="links-column">
+                <h2>Menu</h2>
+                <a>Home</a>
+                <a>Stock</a>
+                <a>Deal contract</a>
+                <a></a>
             </div>
             <div class="links-column">
-              <h2>Resources</h2>
-              <a>GitHub</a>
-              <a>npm</a>
-              <a>Codepen</a>
-              <a>Codesandbox</a>
-              <a>Dribbble</a>
+                <h2>Resources</h2>
+                <a>GitHub</a>
+                <a>npm</a>
+                <a>Codepen</a>
+                <a>Codesandbox</a>
+                <a>Dribbble</a>
             </div>
             <div class="links-column socials-column">
-              <h2>Social Media</h2>
-              <p>
-                Follow me on social media to get the latest awesome reels and
-                posts.
-              </p>
-              <div class="socials">
-                <a href="https://www.facebook.com/profile.php?id=100089833762334" class="fa-brands fa-facebook" ></a>
-                <a href="https://line.me/ti/p/0819424507" class="fa-brands fa-line"></a>
-              </div>
+                <h2>Social Media</h2>
+                <p>
+                    สามารถทำการเช่ารถผ่านช่องทางแชท Fackbook และ Line ได้ที่ลิ้งค์ด้านล่าง
+                </p>
+                <div class="socials">
+                    <a href="https://www.facebook.com/profile.php?id=100089833762334" class="fa-brands fa-facebook" ></a>
+                    <a href="https://line.me/ti/p/0819424507" class="fa-brands fa-line"></a>
+                </div>
             </div>
-          </div>
         </section>
         <section class="bottom">
-          <p class="copyright"></p>
-          <div class="legal">
-            <a> Contact </a>
-            <a> Terms </a>
-            <a> Privacy </a>
-          </div>
+            <p class="copyright">© 2024 All rights reserved</p>
+            <div class="legal">
+                <a>ขอบคุณที่มาใช้บริการของเรา</a>
+            </div>
         </section>
-      </footer>
+    </footer>
 </body>
 </html>
