--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -33,6 +32,13 @@
             </svg>
         </button>
     </section>
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <i class="fa-regular fa-circle-check"></i>
+            <h6>dskfaj;</h6>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
