--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
     <section id="feature" class="section-p1">
         <div class="whyrotchoamahachai">
-            <h2>ทำไมต้องเช่ารถที่<br><span>รถเช่ามหาชัย</span></h2>
+            <h2>ทำไมต้อง<br><span>รถเช่ามหาชัย</span></h2>
         </div>
         <div class="fe-box">
             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M8.5 12.5L10.5 14.5L15.5 9.5" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M7 3.33782C8.47087 2.48697 10.1786 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 10.1786 2.48697 8.47087 3.33782 7" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"></path> </g></svg>
@@ -148,6 +148,28 @@
             <div class="swiper-pagination"></div>
         </div>
     </section>
+    <section id="sm-banner" class="section-p1">
+        <div class="banner-box b1">
+            <h2>ใช้เอกสารอะไรบ้าง</h2>
+            <span>คลิก "อ่านรายละเอียด" เพื่อเรียนรู้เอกสาร<br>ที่จำเป็นสำหรับดำเนินการเช่า</span>
+            <button class="white">อ่านรายละเอียด</button>
+        </div>
+        <div class="banner-box b2">
+            <h2>วิธีดำเนินการเช่า</h2>
+            <span>หากคุณไม่เคยเช่ามาก่อน สามารถคลิก "อ่านรายละเอียด"</span>
+            <button class="white">อ่านรายละเอียด</button>
+        </div>
+    </section>
+    <footer class="section-p1">
+        <div class="col">
+            <img src="" alt="">
+            <h4>Contexct</h4>
+            <p><strong>Address : </strong>35/93  ซอยสิวารัตน์ 1  ถนนบ้านปลายครองครุ  ม.4  ต.นาดี  อ.เมือง  จ.สมุทรสาคร  74000</p>
+            <p><strong>Phone : </strong>081-9424507 (คุณแก้ว)</p>
+            <p>098-2625255 (คุณโต้)</p>
+            <p><strong>Open : </strong> 06.00 - 18.00 Everyday</p>
+        </div>
+    </footer>
     <script src="script.js"></script>
     <script src="swiper.min.js"></script>
 </body>
