--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <a href="Account.html">ความช่วยเหลือเพิ่มเติม</a>
         </div>
         <div class="col install">
-            <h4>My Account</h4>
+            <h4>Payment Gateway</h4>
             <p>Secured Payment Gateway</p>
             <div src="">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b7/MasterCard_Logo.svg/1200px-MasterCard_Logo.svg.png" width="50px" alt="">
