--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@
                 <img src="https://upload.wikimedia.org/wikipedia/commons/c/c5/PromptPay-logo.png" width="50px" alt="">
             </div>
         </div>
-        <div class="copyright"></div>
+        <div class="copyright">
+            <p>Copyright © by Tapat Toungsakul 2024 </p>
+        </div>
     </footer>
     <script src="script.js"></script>
     <script src="swiper.min.js"></script>
